test: fix List access for Java 17